2009-12-10  Chris Moller  <cmoller@redhat.com>

	PR gdb/9399
	* valops.c (value_cast_structs): Added test to return NULL if no
        casting needed.

2009-12-10  Oza Pawandeep <paawan1982@yahoo.com>

	* i386-tdep.c:  Support for floating point recording.
	Records and Replay the i386 floating point registers,
	of i387 FPU.
	(i386_record_floats): New function.
	(i386_process_record): Implement FP insns.

2009-12-03  Tristan Gingold  <gingold@adacore.com>

	* machoread.c (macho_symfile_read): Use symbol_file_add_separate
	to add dsym files.

2009-12-09  Tristan Gingold  <gingold@adacore.com>

	* symfile.h (symbol_file_add_separate): New prototype.
	(find_separate_debug_file_by_buildid): Ditto.
	(find_separate_debug_file_by_debuglink): Ditto.
	* symfile.c (reread_separate_symbols): Remove.
	(find_separate_debug_file): Split into ...
	(find_separate_debug_file_by_buildid): ... this and ...
	(find_separate_debug_file_by_debuglink): ... this.
	(symbol_file_add_with_addrs_or_offsets): Do not save orig_addrs.
	Remove separate debug file handling.
	(symbol_file_add_separate): New function.
	(reread_symbols): Do not considere separate debug files, but free
	them while handling their parent.  Reindent.
	* coffread.c (coff_symfile_read): Handle separate object file.
	* elfread.c (elf_symfile_read): Ditto.

2009-12-09  Joel Brobecker  <brobecker@adacore.com>

	* acinclude.m4: Update comment.

2009-12-09  Joel Brobecker  <brobecker@adacore.com>

	* acinclude.m4: Link against in-tree libiconv by adding
	libiconv.a to the LIBS instead of using -liconv.
	* configure: Regenerate.

2009-12-08  Phil Muldoon  <pmuldoon@redhat.com>

	PR python/10804

	* python/py-type.c (typy_range): New Function.

2009-12-07  Doug Evans  <dje@google.com>

	* charset.c: Include environ.h.
	(ignore_line_p): New function.
	(find_charset_names): Handle older versions of iconv that print
	human-readable output even if stdout is not a tty.

2009-12-07  Kevin Buettner  <kevinb@redhat.com>
